--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "nodemon ./server/index.js",
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "umzug": "^3.8.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
