--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "license": "ISC",
   "author": "LUIGIWONKA",
-  "type": "commonjs",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./server/index.js",
-    "start": "node index.js"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -19,11 +19,34 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
     "umzug": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.4.7",
-    "nodemon": "^3.1.9"
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "file-loader": "^6.2.0",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
+    "vite": "^6.0.7",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
