--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/montserrat": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.3.1",
+    "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -26,9 +27,13 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "node-schedule": "^2.1.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "sequelize": "^6.37.5",
     "umzug": "^3.8.2"
   },
@@ -48,6 +53,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "file-loader": "^6.2.0",
+    "formik": "^2.4.6",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
     "sass": "^1.83.0",
@@ -57,6 +63,7 @@
     "vite": "^6.0.7",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    "yup": "^1.6.1"
   }
 }
