--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "node-schedule": "^2.1.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
