--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "^5.2.0-canary-de1eaa26-20250124",
     "eslint-plugin-react-refresh": "^0.4.16",
     "file-loader": "^6.2.0",
     "formik": "^2.4.6",
