--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server/index.cjs",
-    "start": "webpack serve --mode development",
+    "start": "node ./server/index.cjs",
     "build": "webpack --mode production",
     "lint": "eslint ."
   },
@@ -18,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
+    "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.9.2",
     "node-schedule": "^2.1.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
