--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/index.cjs",
+    "start": "cross-env NODE_ENV=production && node ./server/index.cjs",
     "build": "webpack --mode production",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "cross-env NODE_ENV=development nodemon ./server/index.cjs",
+    "start:webpack": "webpack serve"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0",
@@ -48,6 +50,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.2.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
