--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node ./server/index.cjs",
-    "build": "webpack --mode production",
+    "build": "webpack --config ./webpack.prod.cjs --mode production",
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development webpack serve --open --config webpack.dev.cjs",
-    "start:webpack": "webpack serve --config webpack.prod.cjs"
+    "dev": "cross-env NODE_ENV=development webpack serve --open --config webpack.dev.cjs"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0",
