--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node ./server/index.cjs",
-    "build": "webpack --config webpack.prod.cjs --mode production --stats-error-details",
+    "build": "webpack --config webpack.prod.cjs --mode production",
     "lint": "eslint .",
     "dev": "cross-env NODE_ENV=development webpack serve --open --config webpack.dev.cjs"
   },
