--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node ./server/index.cjs",
-    "build": "webpack --config webpack.prod.cjs --mode production",
+    "build": "webpack --config webpack.prod.cjs",
     "lint": "eslint .",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.dev.cjs"
   },
@@ -51,6 +51,7 @@
     "babel-loader": "^9.2.1",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
