--- a/package.json
+++ b/package.json
@@ -11,69 +11,44 @@
     "start": "cross-env NODE_ENV=production node ./server/index.cjs",
     "build": "webpack --config webpack.prod.cjs",
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.dev.cjs"
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@vitejs/plugin-react": "^4.4.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "formik": "^2.4.6",
+    "globals": "^16.1.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.0",
+    "sequelize": "^6.37.7",
+    "vite": "^6.3.5"
   },
   "dependencies": {
-    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.1",
-    "@mui/joy": "^5.0.0-beta.51",
-    "@mui/material": "^6.3.0",
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-async-errors": "^3.1.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.9.2",
     "node-schedule": "^2.1.1",
-    "pg": "^8.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.1.1",
-    "react-router-dom": "^7.1.1",
-    "sequelize": "^6.37.5",
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
+    "tailwindcss": "^3.4.17",
     "umzug": "^3.8.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^9.2.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.2.0-canary-de1eaa26-20250124",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "file-loader": "^6.2.0",
-    "formik": "^2.4.6",
-    "globals": "^15.14.0",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "nodemon": "^3.1.9",
-    "sass": "^1.84.0",
-    "sass-loader": "^16.0.4",
-    "style-loader": "^4.0.0",
-    "url-loader": "^4.1.1",
-    "vite": "^6.0.7",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "webpack-hot-middleware": "^2.26.1",
-    "webpack-livereload-plugin": "^3.0.2",
-    "webpack-merge": "^6.0.1",
-    "yup": "^1.6.1"
   }
 }
