--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node ./server/index.cjs",
-    "build": "webpack --config webpack.prod.cjs",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "build": "vite build",
     "lint": "eslint .",
     "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
@@ -24,15 +23,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "formik": "^2.4.6",
     "globals": "^16.1.0",
+    "lightningcss": "^1.30.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
+    "terser": "^5.39.2",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
@@ -49,6 +51,7 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^3.4.17",
-    "umzug": "^3.8.2"
+    "umzug": "^3.8.2",
+    "yup": "^1.6.1"
   }
 }
